add sticker for detail element, catalog list fixes

--- a/local/templates/aspro_next/components/aspro/catalog.viewed.next/main_horizontal_rework/_template.php.back1.0.9
+++ b/local/templates/aspro_next/components/aspro/catalog.viewed.next/main_horizontal_rework/_template.php.back1.0.9
@@ -3,19 +3,19 @@ if(!defined('B_PROLOG_INCLUDED') || B_PROLOG_INCLUDED !== true) die();
 $this->setFrameMode(true);
 $arParams['TITLE_BLOCK'] = strlen($arParams['TITLE_BLOCK']) ? $arParams['TITLE_BLOCK'] : GetMessage('CATALOG_VIEWED_TITLE');
 ?>
-
+<!-- noindex -->
 <?if(strlen($arResult['ERROR'])):?>
 	<?ShowError($arResult['ERROR']);?>
 <?else:?>
 	<?if($arResult['ITEMS']):?>
-		<div class="viewed_block">
-			<h3 class="title_block sm two"><?=$arParams["TITLE_BLOCK"]?></h3>
-			<div class="outer_wrap flexslider shadow items border custom_flex top_right" data-plugin-options='{"animation": "slide", "directionNav": true, "itemMargin":10, "controlNav" :false, "animationLoop": true, "slideshow": false, "counts": [4]}'>
+		<div class="viewed_block horizontal">
+			<h3 class="title_block sm"><?=$arParams["TITLE_BLOCK"]?></h3>
+			<div class="outer_wrap flexslider shadow items border custom_flex top_right" data-plugin-options='{"animation": "slide", "directionNav": true, "itemMargin":10, "controlNav" :false, "animationLoop": true, "slideshow": false, "counts": [5,4,3,2,1]}'>
 				<ul class="rows_block slides">
 					<?foreach($arResult['ITEMS'] as $key=>$arItem):?>
-
 						<?
-
+						if($key > 7)
+							continue;
 						$isItem = (isset($arItem['PRODUCT_ID']) ? true : false);
 						?>
 						<li class="item_block">
@@ -26,6 +26,8 @@ $arParams['TITLE_BLOCK'] = strlen($arParams['TITLE_BLOCK']) ? $arParams['TITLE_B
 									$this->AddDeleteAction($arItem['PRODUCT_ID'], $arItem['DELETE_LINK'], CIBlock::GetArrayByID($arParams['IBLOCK_ID'], 'ELEMENT_DELETE'), array('CONFIRM' => GetMessage('CT_BCS_ELEMENT_DELETE_CONFIRM')));
 									?>
 								</div>
+							<?else:?>
+								<div class="item_wrap item"></div>
 							<?endif;?>
 						</li>
 					<?endforeach;?>
@@ -39,7 +41,7 @@ $arParams['TITLE_BLOCK'] = strlen($arParams['TITLE_BLOCK']) ? $arParams['TITLE_B
 				SITE_TEMPLATE_PATH: '<?=SITE_TEMPLATE_PATH?>',
 				CATALOG_FROM_VIEWED: '<?=GetMessage('CATALOG_FROM')?>',
 				SITE_ID: '<? echo SITE_ID; ?>'
-			})
+			})		
 		</script>
 	<?endif;?>
 <?endif;?>
